--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>IP Law AI - Kenya</title>
+  <title>IP Law Chatbot - Kenya</title>
   <style>
     body {
       background-color: #121212;
