--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="chat-header">IP Law AI - Kenya</div>
+    <div class="chat-header">IP Law Chatbot - Kenya</div>
     <div id="chatbox" class="chatbox"></div>
     <div class="input-container">
       <input id="messageInput" class="input-field" type="text" placeholder="Ask about IP law in Kenya..." />
