--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>IP Law Chatbot - Kenya</title>
+  <title>LegAlly: IP Law - Kenya (Beta)</title>
+  <link rel="icon" type="image/jpg" href="favicon.jpg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       background-color: #121212;
@@ -12,14 +14,21 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
+      flex-direction: column;
     }
+
     .container {
-      width: 400px;
+      width: 100%;
+      max-width: 450px;
       background-color: #1e1e1e;
       border-radius: 10px;
       overflow: hidden;
       box-shadow: 0 0 20px rgba(0, 255, 150, 0.3);
+      display: flex;
+      flex-direction: column;
+      height: 85vh;
     }
+
     .chat-header {
       background-color: #333;
       color: #00ff99;
@@ -28,18 +37,22 @@
       font-size: 18px;
       font-weight: bold;
     }
+
     .chatbox {
-      height: 400px;
+      flex-grow: 1;
       padding: 10px;
       overflow-y: auto;
       display: flex;
       flex-direction: column;
+      scrollbar-width: thin;
     }
+
     .input-container {
       display: flex;
       padding: 10px;
       background-color: #222;
     }
+
     .input-field {
       flex-grow: 1;
       padding: 10px;
@@ -50,6 +63,7 @@
       font-size: 14px;
       margin-right: 10px;
     }
+
     .send-button {
       background-color: #00ff99;
       color: #fff;
@@ -60,40 +74,100 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
+
     .send-button:hover {
       background-color: #00cc77;
     }
+
     .message-row {
       display: flex;
       margin: 8px 0;
     }
+
     .message-left .message-bubble {
       background-color: #444;
       color: #e0e0e0;
       text-align: left;
     }
+
     .message-right .message-bubble {
       background-color: #009966;
       color: #fff;
       text-align: right;
       align-self: flex-end;
     }
+
     .message-bubble {
       max-width: 80%;
       padding: 10px;
       border-radius: 10px;
     }
+
+    /* Disclaimer Styling */
+    .disclaimer {
+      text-align: center;
+      font-size: 12px;
+      color: rgba(255, 255, 255, 0.6);
+      padding: 10px;
+    }
+
+    /* Hover Disclaimer */
+    .chat-header:hover::after {
+      content: "LegAlly is not a replacement for legal professionals but a tool for them.";
+      display: block;
+      font-size: 12px;
+      color: #00ff99;
+      margin-top: 5px;
+    }
+
+    /* GGreen Props with Neon Glow */
+    .ggreen {
+      text-align: center;
+      font-size: 14px;
+      font-weight: bold;
+      color: #00ff99;
+      margin-top: 5px;
+      animation: neon-glow 1.5s infinite alternate;
+    }
+
+    @keyframes neon-glow {
+      from {
+        text-shadow: 0 0 5px #00ff99, 0 0 10px #00ff99;
+      }
+      to {
+        text-shadow: 0 0 10px #00ff99, 0 0 20px #00ff99;
+      }
+    }
+
+    /* Mobile Responsiveness */
+    @media (max-width: 600px) {
+      .container {
+        width: 95%;
+        height: 90vh;
+      }
+      .input-field {
+        font-size: 16px;
+      }
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="chat-header">LegAlly:IP Law- Kenya</div>
+    <div class="chat-header">LegAlly: IP Law - Kenya (Beta)</div>
     <div id="chatbox" class="chatbox"></div>
     <div class="input-container">
       <input id="messageInput" class="input-field" type="text" placeholder="Ask about IP law in Kenya..." />
       <button id="sendButton" class="send-button">Send</button>
     </div>
   </div>
+
+  <!-- Fine Print Disclaimer -->
+  <div class="disclaimer">
+    While LegAlly aims for accuracy, mistakes can occur. Please double-check important legal information.
+  </div>
+
+  <!-- GGreen Creator Props -->
+  <div class="ggreen">GGreen – Props to the Creator</div>
 
   <script>
     const chatbox = document.getElementById("chatbox");
