--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>LegAlly: IP Law - Kenya (Beta)</title>
-  <link rel="icon" type="image/jpg" href="favicon.jpg">
+  <link rel="icon" type="image/jpg" href="logo.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
