--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   </div>
 
   <!-- GGreen Creator Props -->
-  <div class="ggreen">GGreen – Props to the Creator</div>
+  <div class="ggreen">GGreen</div>
 
   <script>
     const chatbox = document.getElementById("chatbox");
