--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <title>LegAlly: IP Law - Kenya (Beta)</title>
+   <!-- Add Web App Manifest -->
+  <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/jpg" href="logo.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
